--- a/src/css/master.css
+++ b/src/css/master.css
@@ -22,6 +22,7 @@ body{
     position: absolute;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
     text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    font-size: 4em;
 }
 
 #color >  p, #combo > p{
@@ -34,6 +35,7 @@ body{
     color: #fff;
     text-shadow: 0px 0px 5px black;
     opacity: 0.5;
+    font-size: 2em;
 }
 
 #combo div{
@@ -50,4 +52,5 @@ body{
     text-shadow: 0px 0px 10px rgba(0,0,0,0.5);
     text-transform: uppercase;
     height: 100%;
+    font-size: 3em;
 }
