--- a/src/css/master.css
+++ b/src/css/master.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     text-align: center;
-    font-family: Helvetica, Arial, Verdana, sans-serif;
+    font-family: 'roboto_condensedbold', Helvetica, Arial, Verdana, sans-serif;
 }
 
 #combo, #color{
@@ -64,10 +64,13 @@ body{
 
 #menu h1{
     display: block;
-    background: purple;
+    background: #f26226;
     height: 33%;
     margin: 0;
     padding: 0;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 10em;
 }
 
 #menu ul {
@@ -82,11 +85,22 @@ body{
 #menu ul li {
     display: block;
     height: 50%;
-    background: red;
 }
 
 #menu ul li a {
     display: block;
     height: 100%;
     width: 100%;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 7em;
+}
+
+#menu_picker {
+    background: #d00d6d;
+}
+
+#menu_gallery {
+    background: #3aca52;
 }
